# lovesay

./: .gitignore  LICENSE  README.md  lovesay.py  pyproject.toml
.config/: quotes
.example/: quotes
lovesay/: cli.py  colors.py  love.py  lovesay.py
