[tool.poetry]
name = "lovesay"
version = "0.3.2"
description = "Cowsay, but full of love"
authors = ["ZenithDS"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.scripts]
lovesay = "lovesay.cli:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
