[tool.poetry]
name = "lovesay"
version = "0.3.11"
description = "Cowsay, but full of love"
authors = ["dotzenith"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
kolorz = "^0.2.4"

[tool.poetry.scripts]
lovesay = "lovesay.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
